Fixed typos, basic css styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
-.todo-list {display:block; max-width:900px; border:1px solid black; margin:0 auto; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
-.todo-task {border-bottom:1px solid grey;}
-.todo-desc {display:inline-block; padding:10px; border:1px solid grey; margin:10px;}
+html, .body {background:#cce; margin:0; padding:0; font-family:sans-serif;}
+.todo-header, .todo-list {display:block; background:white; max-width:900px; border:1px solid black; margin:10px auto; padding:0px; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
+.todo-header h1 {padding:0px 10px;}
+.todo-task {border-bottom:1px solid grey; display:flex;  justify-content: space-around; align-items: stretch; }
+.todo-desc {display:inline-block; padding:10px; border:1px solid #ddd; margin:10px; width:70%; display:flex; }
+.todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
