--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,30 @@ html, .body {background:#cce; margin:0; padding:0; font-family:sans-serif;}
 .todo-header, .todo-list {display:block; background:white; max-width:900px; border:1px solid black; margin:10px auto; padding:0px; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
 .todo-header h1 {padding:0px 10px;}
 .todo-task {border-bottom:1px solid grey; display:flex;  justify-content: space-around; align-items: stretch; }
-.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:70%; display:flex; }
+.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:80%; display:flex; }
 .todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
 .todo-edit-active {border:4px solid red;}
 
 body {
   background-color: #4fa2be;
-
   height: 100vh;
 
 
 }
-.titles {
+.app-titles-container {
   text-align: center;
 }
 
 .todo-list-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+
 
 
 }
+
+
 .todo-desc {
   border-radius: 1em;
   border:3px solid #41869e;
@@ -43,13 +45,17 @@ h2 {
 
 .input-flex-container input {
   background-color: #5db7cd;
+
 }
 h3 {
   color:#82b88c;
 }
 
+
 .todos {
   display: flex;
+  justify-content: center;
+
 
 
 }
