--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 html, .body {background:#cce; margin:0; padding:0; font-family:sans-serif;}
 .todo-header, .todo-list {display:block; background:white; max-width:900px; border:1px solid black; margin:10px auto; padding:0px; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
 .todo-header h1 {padding:0px 10px;}
-.todo-task {border-bottom:1px solid grey; display:flex;  justify-content: space-around; align-items: stretch; }
-.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:80%; display:flex; }
-.todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
-.todo-edit-active {border:4px solid red;}
+/* .todo-task {border-bottom:1px solid grey; display:flex;  justify-content: space-around; align-items: stretch; } */
+.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:50%;}
+/* .todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
+.todo-edit-active {border:4px solid red;} */
 
 body {
   background-color: #4fa2be;
@@ -49,6 +49,13 @@ h2 {
 }
 h3 {
   color:#82b88c;
+}
+
+.todos-tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 
