--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 html, .body {background:#cce; margin:0; padding:0; font-family:sans-serif;}
-.todo-header, .todo-list {display:block; background:white; max-width:900px; border:1px solid black; margin:10px auto; padding:0px; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
-.todo-header h1 {padding:0px 10px;}
+/* .todo-header, .todo-list {display:block; background:white; max-width:900px; border:1px solid black; margin:10px auto; padding:0px; box-shadow:3px 3px 6px rgba(0,0,0,0.5);}
+.todo-header h1 {padding:0px 10px;} */
 /* .todo-task {border-bottom:1px solid grey; display:flex;  justify-content: space-around; align-items: stretch; } */
-.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:50%;}
+.todo-desc { padding:10px; border:1px solid #ddd; margin:10px; width:70%;}
 /* .todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
 .todo-edit-active {border:4px solid red;} */
 
@@ -20,6 +20,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  
+  width: 100%;
+  height: 100%;
+
+
+
 
 
 
@@ -32,14 +39,17 @@ body {
 }
 h1 {
   color: white;
+  text-align: center;
 }
 
 h2 {
-  color: #6dc496
+  color: #6dc496;
+  text-align:center;
 }
 .input-flex-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-bottom:2em;
 }
 
@@ -55,6 +65,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
 }
 
@@ -62,6 +73,7 @@ h3 {
 .todos-task {
   display: flex;
   justify-content: center;
+  align-items: center;
 
 
 
