--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@ html, .body {background:#cce; margin:0; padding:0; font-family:sans-serif;}
 /* .todo-edit, .todo-delete {width:120px; display:flex; 0 0 120px; justify-content: center; align-items:center; font-weight:bold;}
 .todo-edit-active {border:4px solid red;} */
 
-body {
-  background-color: #4fa2be;
-  height: 100vh;
+html {
+  background: #4fa2be;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+
 
 
 }
@@ -21,7 +24,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+
   width: 100%;
   height: 100%;
 
@@ -85,4 +88,18 @@ h3 {
 
 .todos img {
   margin-left: 0.5em;
+}
+
+.edit-button, .delete-button {
+  width:55px;
+  height:45px;
+}
+
+.text-strike-through {
+  text-decoration: line-through;
+  padding:10px;
+  margin:10px;
+  width:70%;
+  border-radius: 1em;
+  border:3px solid #41869e;
 }
